--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
